add github link

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div>
         <a href="https://instagram.com/maksimovich.kit">Мой Instagram</a>
         <a href="https://t.me/maksimovich">Мой телеграм</a>
+        <a href="https://github.com/y-maksimovich">Мой github</a>
     </div>
 
     <h2>Мои навыки:</h2>
